--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-dialog": "^9.3.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-ionicons": "^4.6.5",
     "react-native-reanimated": "~3.10.1",
